<resources>
    <string name="app_name">Profile</string>
    <string name="description_profile_image">Profile Image</string>
    <string name="pull_to_refresh">Pull to Refresh</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading ...</string>
    <string name="view_all"><u>View all</u>.</string>
    <string name="pinned">Pinned</string>
    <string name="top_repositories">Top repositories</string>
    <string name="started_repositories">Starred repositories</string>
    <string name="profile_name">Name</string>
    <string name="profile_handler">handler</string>
    <string name="email">example@gmail.com</string>
    <string name="followers">&#160; followers</string>
    <string name="followings"> &#160; followings</string>
    <string name="start_count">00</string>
</resources>