<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_profile"
    android:layout_width="match_parent"
    android:minWidth="500dp"
    android:layout_height="180dp"
    android:layout_marginTop="@dimen/margin_card"
    android:layout_marginLeft="@dimen/margin"
    android:foreground="@drawable/bg_roundrect_ripple_light_border"
    app:cardElevation="0dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:gravity="start"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_profile_small"

                android:layout_marginTop="@dimen/margin"

                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/height_profile_small"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="50dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/profileImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher_background" />
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profileName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_name"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView_repositoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_height"
            android:text="TextView"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_height"
            android:text="TextView" />

        <LinearLayout
            android:id="@+id/linerLayout_followers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:gravity="start"
            android:orientation="horizontal">
            android:layout_marginTop="@dimen/margin"

            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_star_24"></ImageView>

            <TextView
                android:id="@+id/textView_stars"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/margin"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin_height"
                android:text="@string/followers"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_stop_circle_24"></ImageView>

            <TextView
                android:id="@+id/textView_primaryLanguage"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin_height"
                android:text="@string/followings"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>